--- a/package.json
+++ b/package.json
@@ -5,7 +5,12 @@
   "dependencies": {
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
-    "react-scripts": "2.0.5"
+    "react-scripts": "2.0.5",
+    "bulma": "^0.7.2",
+    "bulma-extensions": "^3.0.0",
+    "moment": "^2.22.2",
+    "react-helmet": "^5.2.0",
+    "styled-components": "^4.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -21,5 +26,12 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "bulma": "^0.7.2",
+    "bulma-extensions": "^3.0.0",
+    "moment": "^2.22.2",
+    "react-helmet": "^5.2.0",
+    "styled-components": "^4.0.0"
+  }
 }
