--- a/package.json
+++ b/package.json
@@ -3,13 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^16.5.2",
-    "react-dom": "^16.5.2",
-    "react-scripts": "2.0.5",
     "bulma": "^0.7.2",
     "bulma-extensions": "^3.0.0",
     "moment": "^2.22.2",
+    "node-sass": "^4.9.4",
+    "react": "^16.5.2",
+    "react-dom": "^16.5.2",
     "react-helmet": "^5.2.0",
+    "react-scripts": "2.0.5",
     "styled-components": "^4.0.0"
   },
   "scripts": {
