--- a/package.json
+++ b/package.json
@@ -10,14 +10,16 @@
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-helmet": "^5.2.0",
+    "react-relay": "^1.6.2",
     "react-scripts": "2.0.5",
     "styled-components": "^4.0.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "PORT=3006 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "relay": "relay-compiler --src ./src --schema ./schema.graphql"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -29,10 +31,13 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "babel-plugin-relay": "^1.6.2",
     "bulma": "^0.7.2",
     "bulma-extensions": "^3.0.0",
+    "graphql": "^14.0.2",
     "moment": "^2.22.2",
     "react-helmet": "^5.2.0",
+    "relay-compiler": "^1.6.2",
     "styled-components": "^4.0.0"
   }
 }
