--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-helmet": "^5.2.0",
+    "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "2.0.5",
+    "react-stickynode": "^2.0.1",
     "styled-components": "^4.0.0"
   },
   "scripts": {
